# warag-base

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ASSISTANT_MEMORY.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint_ollama.sh  pyproject.toml  pytest.ini  requirements.txt
agents/consistency_checker/: agent.py
agents/creativity_assistant/: agent.py
agents/wba/: agent.py
cli/: __init__.py
config/: local.yaml  remote.yaml
crewai/: __init__.py
docs/: PROJECT_OVERVIEW.md  TECH_SPEC.md  agent_flow.md  consistency_checker.md  docker_setup.md  embedding_models.md  network_access.md  orchestrator.md  overview.md  powershell_notes.md  progress.md  roadmap.md  run_modes.md  story_structure.md  wba_classification.md
docs/tasks/: task_11.md
docs/wba_samples/: README.md  conflict_web.md  economics-condensed.md  geo_map.md  institutions.md  mythos.md  nachtgeld.md  sample1.md  tech_magic.md  timeline.md
scripts/: init_postgres.sql  run_tests.ps1  test_relationship_analyzer.py
src/: main.py
src/agents/: entity_extractor.py  graph_coordinator.py  relationship_analyzer.py
src/config/: settings.py
src/database/: __init__.py  neo4j_client.py  postgres_client.py
src/models/: __init__.py  entities.py  relationships.py
storage/: __init__.py  long_term.py  rag_store.py  short_term.py
tests/: test_cli.py  test_consistency_checker.py  test_file_store.py  test_llm_integration.py  test_memory.py  test_orchestrator.py  test_story_structure_analyst.py  test_wba_archivist.py  test_wba_classification.py  test_web.py
writeragents/: __init__.py
(+40 files in other folders)
