[project]
name = "writeragents"
version = "0.1.0"
description = "Multi-agent storytelling tools"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pyyaml",
    "redis",
    "psycopg2-binary",
    "flask",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
writeragents = "writeragents.cli:main"
